the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports: # will let TCP traffic from port 1234 to port 80
    - port: 1234
      protocol: TCP
      targetPort: 80
