the_project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: the-project-svc
                port:
                  number: 1234 # check service.yaml
          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 2345 # check service.yaml
