the_project/manifests/ingress_gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-project-ingress
  namespace: project
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 1234 # check ../frontend/manifests/deployment.yaml
          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 2345 # check ../backend/manifests/deployment.yaml
